--- a/otp.css
+++ b/otp.css
@@ -123,7 +123,6 @@ button:focus {
   text-align: center;
 }
 
-
 @media (max-width: 768px) {
   .main-Div {
     background-color: #008265;
@@ -151,4 +150,26 @@ button:focus {
   .heading {
     font-size: x-small;
   }
+}
+
+#nav-bar {
+  border-bottom: 2px solid;
+  background-color: white;
+  width: 100%;
+  border-color: #68a7f1;
+  z-index: 1;
+}
+.heading {
+  padding-left: 20px;
+  font-weight: bold;
+}
+
+.otp-form {
+  padding-left: 50px;
+  padding-top: 30px;
+}
+
+.auth-text {
+  padding-left: 22px;
+  padding-bottom: 22px;
 }
