--- a/style.css
+++ b/style.css
@@ -22,12 +22,6 @@ body {
 .second-Div {
   width: 500px;
   height: 500px;
-  /* background-color: rgb(146, 168, 144);
-    /* border-radius: 305px 5px 25px 5px; */
-  /* border-top-left-radius: 100px 220px;
-    border-bottom-left-radius: 100px 220px;  */
-
-  /* background-color: rgb(177, 218, 31); */
 }
 .circular-parent {
   position: absolute;
@@ -85,42 +79,17 @@ button {
   padding: 5px;
 }
 
-.end-p {
-  color: #008265;
-  padding-left: 65px;
-  margin-top: 10px;
+p {
+  color: #9bd6c7;
+  padding-left: 10px;
+  margin-top: 5px;
   cursor: pointer;
-  font-size: small;
 }
 
 button:focus {
   outline: none !important;
   border-color: #719ece;
   box-shadow: 0 0 10px #719ece;
-}
-
-.form-Image {
-  height: 50px;
-  padding-left: 75px;
-  margin-bottom: 25px;
-}
-
-.p1 {
-  font-size: x-small;
-  /* font-size: small; */
-  margin-left: 10px;
-}
-
-.Authentication-Field {
-  text-align: center;
-}
-
-::-webkit-input-placeholder {
-  text-align: center;
-}
-
-:-moz-placeholder {
-  text-align: center;
 }
 
 @media (max-width: 768px) {
@@ -152,17 +121,31 @@ button:focus {
   }
 }
 
-#nav-bar {
+#navbar {
   border-bottom: 2px solid;
   background-color: white;
   width: 100%;
   border-color: #68a7f1;
   z-index: 1;
 }
+
 .heading {
   padding-left: 20px;
   font-weight: bold;
 }
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-text {
+  margin: 30px 0px 30px 0px;
+}
+
+/* otp form styling */
 
 .otp-form {
   padding-left: 50px;
@@ -172,4 +155,36 @@ button:focus {
 .auth-text {
   padding-left: 22px;
   padding-bottom: 22px;
+}
+
+.form-Image {
+  height: 50px;
+  padding-left: 75px;
+  margin-bottom: 25px;
+}
+
+.p1 {
+  font-size: x-small;
+  /* font-size: small; */
+  margin-left: 10px;
+}
+
+/* .Authentication-Field {
+  text-align: center;
+} */
+
+.Authentication-Field::-webkit-input-placeholder {
+  text-align: center;
+}
+
+:-moz-placeholder {
+  text-align: center;
+}
+
+.end-p {
+  color: #008265;
+  padding-left: 65px;
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: small;
 }
